# echo_vault

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  LICENSE  README.md  echo_vault.sh  flake.nix  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
packaging/: PKGBUILD  demo.tape
packaging/tapeback-diarize/: PKGBUILD
packaging/tapeback-llm/: PKGBUILD
packaging/tapeback-tray/: PKGBUILD
scripts/: aur-publish.sh  release.sh
src/meetrec/: audio.py  cli.py  diarizer.py  formatter.py  recorder.py  settings.py  summarizer.py  transcriber.py
src/tapeback/: _gpu.py  _lazy.py  channel.py  cli.py  const.py  diarizer.py  formatter.py  live.py  pipeline.py  recorder.py  settings.py  speaker_merge.py  summarizer.py  transcriber.py  tray.py  vault.py
tests/: conftest.py  fixtures.py  test_audio.py  test_cli.py  test_diarizer.py  test_e2e_quality.py  test_formatter.py  test_integration.py  test_live.py  test_recorder.py  test_settings.py  test_summarizer.py  test_transcriber.py  test_tray.py
tests/regressions/: test_diarizer_regressions.py  test_path_traversal.py  test_pipeline_regressions.py  test_recorder_regressions.py  test_transcriber_regressions.py
