[project]
name = "echo-vault"
version = "0.6.0"
description = "Local meeting audio recorder with transcription for Obsidian"
readme = "README.md"
authors = [{ name = "Yast", email = "yastcher@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "pyannote-audio>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.scripts]
meetrec = "meetrec.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetrec"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".claude",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "G", "PLC", "PLR", "SIM", "S", "RUF"]
ignore = [
    "S603",    # subprocess calls are safe (list-based, no shell)
    "S607",    # partial executable paths (ffmpeg, parecord) are intentional
    "PLR2004", # magic numbers — too noisy for audio/test code
    "S108",    # /tmp/meetrec is intentional, secured with 0700 permissions
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLC0415"]  # assert, fake tokens, local imports in tests
"src/meetrec/cli.py" = ["PLC0415"]         # lazy imports for heavy ML deps
"src/meetrec/diarizer.py" = ["PLC0415", "PLR0912", "PLR0915"]  # lazy ML imports, complex audio algorithms
"src/meetrec/summarizer.py" = ["PLC0415", "S101"]  # lazy imports for SDKs, assert for type narrowing

[tool.ruff.lint.isort]
known-local-folder = ["meetrec", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=meetrec --cov-report=term-missing"

[tool.coverage.run]
source = ["src/meetrec"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src/meetrec"]

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "pyannote.*",
    "torch.*",
    "torchaudio.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "meetrec.diarizer"
# pyannote Pipeline stubs are incomplete (Pipeline | None, broken __call__)
disallow_any_expr = false
